Rework worker code and add more logic

--- a/emscripten.html
+++ b/emscripten.html
@@ -26,7 +26,7 @@
             };
         </script>
 
-        <p>Use WASD or arrow keys to move around, and space to place a box. A worker will come and pick up the box.</p>
+        <p>Use WASD or arrow keys to move around. Press space somewhere to request a box - a worker collect one, then come and place it there.</p>
         <h3>Task system</h3>
         <p>Many management simulations games have a mechanic where workers carry out tasks, for example the contruction workers in Prison Architect, and I wanted to implement something like this.</p>
         <p>
